avoid overlapping (dropdown menu))

--- a/src/website_implementation/css/general_styles.css
+++ b/src/website_implementation/css/general_styles.css
@@ -101,6 +101,7 @@ header {
     border-radius: 10px;
     overflow: hidden;
     transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    z-index: 1000; /* avoid overlap */
 }
 
 .dropdown_menu.open {
